fixing responsive design on mobile view

--- a/src/components/footer/footer.styles.css
+++ b/src/components/footer/footer.styles.css
@@ -69,3 +69,11 @@ ul.Social-Icons {
     font-family: Roboto;
     color: #4C586F
   }
+
+  @media only screen and (max-width: 815px) {
+    span.footer-info {
+      margin: 0 24px;
+      text-align: center;
+      font-size: 14px;
+  }
+}
